@shfaddy: Getting there enshallah!
D  example/kit/attack/oscilla.scenario
D  example/kit/decay/oscilla.scenario
D  example/kit/distance/oscilla.scenario
D  example/kit/dom/attack/oscilla.scenario
D  example/kit/dom/decay/oscilla.scenario
D  example/kit/dom/distance/oscilla.scenario
D  example/kit/dom/higher/attack/oscilla.scenario
D  example/kit/dom/higher/decay/oscilla.scenario
D  example/kit/dom/higher/distance/oscilla.scenario
D  example/kit/dom/higher/length/oscilla.scenario
D  example/kit/dom/higher/oscilla.scenario
D  example/kit/dom/higher/pitch/oscilla.scenario
D  example/kit/dom/higher/release/oscilla.scenario
D  example/kit/dom/higher/shift/oscilla.scenario
D  example/kit/dom/higher/sustain/oscilla.scenario
D  example/kit/dom/higher/sweep/oscilla.scenario
D  example/kit/dom/length/oscilla.scenario
D  example/kit/dom/oscilla.scenario
D  example/kit/dom/pitch/oscilla.scenario
D  example/kit/dom/release/oscilla.scenario
D  example/kit/dom/shift/oscilla.scenario
D  example/kit/dom/sustain/oscilla.scenario
D  example/kit/dom/sweep/oscilla.scenario
D  example/kit/length/oscilla.scenario
D  example/kit/oscilla.scenario
D  example/kit/pitch/oscilla.scenario
D  example/kit/release/oscilla.scenario
D  example/kit/shift/oscilla.scenario
D  example/kit/sustain/oscilla.scenario
D  example/kit/sweep/oscilla.scenario
A  example/main/scenario/hijaz.md
D  example/nota/kit/attack/oscilla.scenario
D  example/nota/kit/decay/oscilla.scenario
D  example/nota/kit/distance/oscilla.scenario
D  example/nota/kit/dom/attack/oscilla.scenario
D  example/nota/kit/dom/decay/oscilla.scenario
D  example/nota/kit/dom/distance/oscilla.scenario
D  example/nota/kit/dom/higher/attack/oscilla.scenario
D  example/nota/kit/dom/higher/decay/oscilla.scenario
D  example/nota/kit/dom/higher/distance/oscilla.scenario
D  example/nota/kit/dom/higher/length/oscilla.scenario
D  example/nota/kit/dom/higher/oscilla.scenario
D  example/nota/kit/dom/higher/pitch/oscilla.scenario
D  example/nota/kit/dom/higher/

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "type": "module",
   "exports": {
     ".": "./scenario/index.js",
-    "./*": "./scenario/*.js"
+    "./*": "./scenario/*.js",
+    "./kit/*": "./kit/*.js"
   },
   "bin": "./server.js",
   "dependencies": {
