@shfaddy: Oscilla Redesigned
M  example/README.md
M  example/dom/README.md
M  example/oscilla.csd
D  kit/bar.js
D  kit/brass.js
D  kit/fm.js
D  kit/gogobell.js
D  kit/noise.js
D  kit/prerequisites/marmstk1.wav
D  kit/sine.js
D  kit/tambourine.js
D  kit/vco.js
M  package.json
A  scenario/code.js
M  scenario/controller.js
D  scenario/engine.js
M  scenario/index.js
A  scenario/instrument.js
D  scenario/module.js
M  scenario/parameter.js
D  scenario/phone.js
D  scenario/sound.js

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "license": "Unlicense",
   "author": "Shaikh Faddy <shfaddy@gmail.com> (https://github.com/shfaddy#README)",
   "type": "module",
+  "main": "server.js",
   "exports": {
     ".": "./scenario/index.js",
     "./*": "./scenario/*.js",
